# solo-pool-cloud-config

./: .gitignore  LICENSE.md  README.md  cloud-config.yaml  config.sh.example  generic-cloud-init.yaml  hetzner-cloud-config.yaml  install.sh
install/: 01-system-update.sh  02-cis-hardening.sh  03-ufw-setup.sh  04-user-setup.sh  05-install-dependencies.sh  10-install-bitcoin.sh  11-install-bch.sh  12-install-digibyte.sh  13-install-monero.sh  14-install-tari.sh  15-install-aleo.sh  16-install-webui.sh  17-install-payments.sh  20-configure-services.sh  99-finalize.sh
install-scripts/: 01-system-update.sh  02-cis-hardening.sh  03-ufw-setup.sh  04-user-setup.sh  05-install-dependencies.sh  10-install-bitcoin.sh  11-install-bch.sh  12-install-digibyte.sh  13-install-monero.sh  14-install-tari.sh  15-install-aleo.sh  16-install-webui.sh  17-install-payments.sh  20-configure-services.sh  99-finalize.sh
install-scripts/files/config/: bchn.conf.template  bitcoin.conf.template  ckpool-bch.conf.template  ckpool-btc.conf.template  ckpool-dgb.conf.template  digibyte.conf.template  monerod.conf.template  tari-merge-proxy.toml.template  tari-miner.toml.template  tari-node.toml.template
install-scripts/files/motd/: 99-solo-pool
install-scripts/files/notes/: aleo-setup.txt.template  p2pool-setup.txt.template
install-scripts/files/scripts/: start-aleo.sh  start-all.sh  start-bch.sh  start-btc.sh  start-dgb.sh  start-nodes.sh  start-p2pool.sh.template  start-pools.sh  start-prover.sh.template  start-xmr.sh  start-xtm.sh  status.sh  stop-all.sh  stop-nodes.sh  stop-pools.sh  sync-status.sh
install-scripts/files/systemd/: node-aleo-snarkos.service  node-bch-bchn.service  node-btc-bitcoind.service  node-dgb-digibyted.service  node-xmr-monerod.service  node-xtm-minotari.service  pool-aleo.service  pool-bch-ckpool.service  pool-btc-ckpool.service  pool-dgb-ckpool.service  pool-xmr-monero-pool.service  pool-xmr-p2pool.service  (+3 more)
payments/: Cargo.toml  config.toml.example
payments/src/: api.rs  config.rs  db.rs  main.rs  processor.rs
payments/src/pools/: aleo.rs  minotari.rs  mod.rs  monero_pool.rs  tari.rs
payments/src/wallets/: aleo.rs  mod.rs  monero.rs  tari.rs
scripts/: 01-system-update.sh  02-cis-hardening.sh  03-ufw-setup.sh  04-user-setup.sh  05-install-dependencies.sh  10-install-bitcoin.sh  11-install-bch.sh  12-install-digibyte.sh  13-install-monero.sh  14-install-tari.sh  15-install-aleo.sh  20-configure-services.sh  99-finalize.sh
webui/: Cargo.toml  config.toml.example
webui/src/: access_log.rs  auth.rs  config.rs  db.rs  main.rs  models.rs
webui/src/api/: aleo.rs  ckpool.rs  mod.rs  monero_pool.rs  nodes.rs  p2pool.rs  tari.rs
webui/src/static/: index.html  login.html
webui/src/static/css/: login.css  style.css
webui/src/static/js/: app.js
(+43 files in other folders)
