[package]
name = "solopool-payments"
version = "0.1.0"
edition = "2021"
description = "Payment processor for solo mining pool - redistributes rewards to miners"
authors = ["Solo Pool"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework for API endpoints
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database (SQLite for share tracking and payment history)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# HTTP client for wallet RPC calls
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1", features = ["serde"] }

# Async traits
async-trait = "0.1"

# UUID for transaction IDs
uuid = { version = "1", features = ["v4", "serde"] }

[[bin]]
name = "solopool-payments"
path = "src/main.rs"
